--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/* @charset "UTF-8";
 /* @font-face {
   font-family: iAWriterMono;
   src: url("iAWriterMonoS-Regular.ttf");
@@ -26,6 +26,11 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.hoverCard span {
+  display: inline-block;
+  padding-top: 3px;
+}
+
 html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -35,49 +40,18 @@ html {
     sans-serif;
 
   background: var(--secondary);
-  background-size: cover;
-}
-
-body {
-  /* padding: 60px 30px 30px 40px; */
-  min-height: 100vh;
 }
 
 .landing {
   padding: 60px 30px 30px 40px;
   display: grid;
-  grid-template-columns: 730px 1fr;
+  grid-template-columns: 550px 1fr;
   column-gap: 40px;
 }
-
-.row-container {
+.about {
   grid-column-start: 1;
-}
-.row {
-  display: grid;
-  opacity: 0;
-  grid-template-columns: 180px 1fr;
-  margin-bottom: 58px;
-  animation: loadIn 0.8s 1s forwards;
-}
-
-.row:nth-child(1) {
-  animation-delay: 0.5s;
-}
-.row:nth-child(2) {
-  animation-delay: 0.55s;
-}
-.row:nth-child(3) {
-  animation-delay: 0.6s;
-}
-.row:last-child {
-  margin-bottom: 0px;
-  animation-delay: 0.65s;
-}
-
-.projects {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  width: 540px;
+  position: fixed;
 }
 
 ::selection {
@@ -96,15 +70,26 @@ body {
 
 a,
 p,
-span {
+span,
+b {
   color: var(--primary);
   line-height: 1.5em;
   font-size: 17px;
   font-style: normal;
-  font-weight: 400;
+
   letter-spacing: 0em;
   z-index: 0;
   width: auto;
+}
+
+a,
+p,
+span {
+  font-weight: 400;
+}
+
+b {
+  font-weight: 600;
 }
 
 a {
@@ -112,9 +97,8 @@ a {
   border-bottom: 1px solid var(--primary-underline);
 }
 
-a:hover {
+.about a:hover {
   opacity: 0.6;
-  /* background: rgba(0, 0, 0, 0.03); */
 }
 
 p {
@@ -125,100 +109,92 @@ p {
   margin-bottom: 24px;
 }
 
-/* video,
-img {
-  position: fixed;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: opacity 0.2s, transform 0.1s;
-  transform: scale(1);
-  pointer-events: none;
-  visibility: visible;
-} */
-
 .media {
   grid-column-start: 2;
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
 
-.portrait-container {
-  opacity: 0;
-  /* animation: loadIn 0.8s 1s forwards; */
-  transition: 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  animation-delay: 0.7s;
-}
-
-.hoverCard,
-.portrait {
+.hoverCard {
   width: 100%;
   max-width: 1000px;
-  height: auto;
-  position: absolute;
-  z-index: 100 !important;
-  pointer-events: none;
+  /* position: sticky; */
+  /* top: 60px; */
+  transform-origin: center top;
   transform: scale(1);
-  transition: 0.1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  /* border: 1px solid var(--primary); */
+  transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  margin-bottom: 30px;
+  border-bottom: none;
+  display: inline-block;
+  background: rgba(0, 0, 0, 0);
+  animation: loadIn 0.8s 1s forwards;
+  opacity: 0;
+}
+
+.about,
+footer {
+  opacity: 0;
+  animation: loadIn 0.8s 0.5s forwards;
+}
+
+.hoverCard:nth-child(1) {
+  animation-delay: 0.5s;
+}
+.hoverCard:nth-child(2) {
+  animation-delay: 0.55s;
+}
+.hoverCard:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.hoverCard:nth-child(4) {
+  animation-delay: 0.65s;
+}
+
+.hoverCard:last-child {
+  margin-bottom: 0px;
+  animation-delay: 0.65s;
+}
+
+.hoverCard a {
+  text-decoration: none;
+}
+
+.hoverCard:hover > img {
+  box-shadow: 0 0 100x rgba(255, 255, 255, 0.1);
+}
+
+.hoverCard:hover {
+  transform: scale(1.005);
+  opacity: 0.95;
 }
 
 .hoverCard video,
 .hoverCard img {
   border: 0.5px solid var(--primary-underline);
   border-radius: 10px;
-}
-
-.hoverCard {
-  opacity: 0;
-  transform: scale(0.95);
-}
-
-.media video,
-.media img {
+  display: block;
   width: 100%;
   height: auto;
-  object-fit: cover;
-  box-shadow: 0 0 200px rgba(255, 255, 255, 0.05);
   max-height: 90vh;
+  object-fit: cover;
 }
 
-.media p {
+.hoverCard span,
+.hoverCard b {
   margin-top: 5px;
   font-size: 15px;
-  opacity: 0.5;
   letter-spacing: 0.003em;
 }
 
-.showHoverCard {
-  opacity: 1;
-  transform: scale(1);
+.hoverCard span {
+  opacity: 0.5;
 }
 
-.show {
-  opacity: 0.4;
-  visibility: visible;
-}
-
-.hide {
-  transform: scale(0.95);
-  opacity: 0;
-}
-
-.wrap {
-  z-index: 100;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow-x: hidden;
-  pointer-events: none;
-  min-height: 100vh;
+footer {
+  position: fixed;
+  margin-top: 0px;
+  bottom: 30px;
+  width: 100%;
 }
 
 @keyframes loadIn {
@@ -231,20 +207,24 @@ img {
 }
 
 @media (max-width: 950px) {
-  .media {
-    display: none;
-  }
-}
-
-@media (max-width: 800px) {
-  .row {
-    grid-template-columns: 1fr;
-    row-gap: 15px;
-    max-width: 510px;
-  }
-
   .landing {
     grid-template-columns: 1fr;
+  }
+  .about {
+    position: static;
+    width: 100%;
+    max-width: 540px;
+  }
+  .media {
+    margin-top: 30px;
+    grid-column-start: 1;
+  }
+
+  footer {
+    position: static;
+    margin-top: 50px;
+    bottom: none;
+    width: 100%;
   }
 }
 
@@ -254,30 +234,11 @@ img {
     column-gap: 0;
   }
 
-  .a:hover {
-    opacity: 0.7;
-  }
-
-  .wrap {
-    display: none;
-  }
-
-  .ball {
-    display: none;
-  }
-
-  footer {
-    left: 14px;
-    position: static;
-    margin-top: 0px;
-    padding-bottom: 25px;
-    /* bottom: 20px; */
-  }
-
   a,
   p,
-  span {
-    line-height: 1.5em;
+  span,
+  b {
+    line-height: 1.4em;
     font-size: 16px;
     letter-spacing: 0em;
   }
