--- a/main.css
+++ b/main.css
@@ -4,26 +4,12 @@
   src: url("iAWriterMonoS-Regular.ttf");
 } */
 
+@import "reset.css";
+
 :root {
   --primary: rgba(255, 255, 255, 1);
   --primary-underline: rgba(255, 255, 255, 0.2);
   --secondary: rgba(0, 0, 0, 0.85);
-}
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-
-  -webkit-user-drag: none;
-  -khtml-user-drag: none;
-  -moz-user-drag: none;
-  -o-user-drag: none;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .hoverCard span {
@@ -70,26 +56,27 @@ html {
 
 a,
 p,
-span,
-b {
+span {
   color: var(--primary);
   line-height: 1.5em;
   font-size: 17px;
   font-style: normal;
-
+  font-weight: 400;
   letter-spacing: 0em;
   z-index: 0;
   width: auto;
 }
 
-a,
-p,
-span {
-  font-weight: 400;
-}
-
 b {
-  font-weight: 600;
+  font-size: 19px;
+  color: var(--primary);
+  line-height: 1.5em;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: -0.01em;
+  z-index: 0;
+  width: auto;
 }
 
 a {
@@ -112,6 +99,7 @@ p {
 .media {
   grid-column-start: 2;
   width: 100%;
+  margin-top: 40px;
   /* position: relative; */
 }
 
@@ -121,14 +109,25 @@ p {
   /* position: sticky; */
   /* top: 60px; */
   transform-origin: center top;
-  transform: scale(1);
-  transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  margin-bottom: 30px;
+
   border-bottom: none;
   display: inline-block;
   background: rgba(0, 0, 0, 0);
   animation: loadIn 0.8s 1s forwards;
   opacity: 0;
+}
+
+.hoverCard,
+figure {
+  transition: opacity 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+figure {
+  margin-bottom: 30px;
+}
+
+figure:last-child {
+  margin-bottom: 70px;
 }
 
 .about,
@@ -163,9 +162,9 @@ footer {
   box-shadow: 0 0 100x rgba(255, 255, 255, 0.1);
 }
 
-.hoverCard:hover {
+figure:hover {
   transform: scale(1.005);
-  opacity: 0.95;
+  opacity: 0.9;
 }
 
 .hoverCard video,
