--- a/main.css
+++ b/main.css
@@ -101,9 +101,7 @@ p {
 .media {
   grid-column-start: 2;
   width: 100%;
-
-  /* margin-top: 40px; */
-  /* position: relative; */
+  margin-top: 40px;
 }
 
 .hoverCard {
