--- a/main.sass
+++ b/main.sass
@@ -8,21 +8,8 @@
 
 :root {
   --primary: rgba(255, 255, 255, 1);
-  --primary-underline-inactive: rgba(255, 255, 255, 0.1);
-  --primary-underline-active: rgba(255, 255, 255, .5);
+  --primary-underline: rgba(255, 255, 255, 0.2);
   --secondary: rgba(50, 50, 50, 1);
-
-  --h3-size: 17px;
-
-  --body-font-family: 'neue-haas-grotesk-text';
-  --body-line-height: 150%;
-  --body-size: 15px;
-  --body-letter-spacing: 0.02em;
-  --body-color: rgba(255,255,255,.9);
-
-  --caption-size: 14px;
-  --caption-letter-spacing: 0.02em;
-  --bg: #111111;
 }
 
 .hoverCard span {
@@ -34,17 +21,17 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 
-  font-family: var(--body-font-family),neue-haas-unica, aktiv-grotesk, -apple-system, BlinkMacSystemFont,
+  font-family: neue-haas-unica, aktiv-grotesk, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
 
-  background: var(--bg);
+  background: var(--secondary);
 }
 
 .landing {
   padding: 60px 30px 30px 40px;
   display: grid;
-  grid-template-columns: 520px 1fr;
+  grid-template-columns: 530px 1fr;
   column-gap: 40px;
 }
 .about {
@@ -55,9 +42,8 @@ html {
 
 ::selection {
   color: none;
-  background: none; 
+  background: none;
 }
-
 /* For Mozilla Firefox */
 ::-moz-selection {
   color: none;
@@ -70,55 +56,38 @@ html {
 
 a,
 p,
-b {
-  color: var(--body-color);
-  line-height: var(--body-line-height);
-  font-size: var(--body-size);
+span {
+  color: var(--primary);
+  line-height: 1.5em;
+  font-size: 17px;
   font-style: normal;
   font-weight: 400;
-  letter-spacing: var(--body-letter-spacing);
+  letter-spacing: 0em;
   z-index: 0;
   width: auto;
 }
 
-b{
-  font-weight: 600;
-  color: var(--body-color);
-  line-height: var(--body-line-height);
-  font-size: var(--body-size);
+b {
+  font-size: 19px;
+  color: var(--primary);
+  line-height: 1.5em;
+  font-size: 19px;
   font-style: normal;
-  letter-spacing: var(--body-letter-spacing);
+  font-weight: 500;
+  letter-spacing: -0.01em;
   z-index: 0;
   width: auto;
+  /* font-family: "aktiv-grotesk"; */
 }
-
 
 a {
   text-decoration: none;
-  border-bottom: 1px solid var(--primary-underline-inactive);
-}
-
-span{
-  font-size: var(--caption-size);
-  color: var(--body-color);
-  line-height: var(--body-line-height);
-  letter-spacing: var(--caption-letter-spacing);
-  font-style: normal;
-  font-weight: 400;
-  z-index: 0;
-  width: auto;
-  margin-top: 5px;
-  opacity: 0.5;
-}
-
-span b{
-  font-size: var(--caption-size);
+  border-bottom: 1px solid var(--primary-underline);
 }
 
 .about a:hover,
 footer a:hover {
-  border-bottom: 1px solid var(--primary-underline-active);
-  color: rgba(255,255,255,1);
+  opacity: 0.6;
 }
 
 p {
@@ -189,6 +158,9 @@ footer {
   text-decoration: none;
 }
 
+.hoverCard:hover > img {
+  box-shadow: 0 0 100x rgba(255, 255, 255, 0.1);
+}
 
 figure:hover {
   transform: scale(1.005);
@@ -197,25 +169,25 @@ figure:hover {
 
 .hoverCard video,
 .hoverCard img {
-  border: 1px solid var(--primary-underline-inactive);
+  border: 0.5px solid var(--primary-underline);
   border-radius: 10px;
   display: block;
   width: 100%;
   height: auto;
   max-height: 90vh;
   object-fit: cover;
-  /* transition: .1s; */
 }
 
-.hoverCard:hover > img, .hoverCard:hover > video{
-  box-shadow: 0 0 100x rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255,255,255, .8);
+.hoverCard span,
+.hoverCard b {
+  margin-top: 5px;
+  font-size: 15px;
+  letter-spacing: 0.003em;
 }
 
-.hoverCard:hover > span{
-  opacity: .9;
+.hoverCard span {
+  opacity: 0.5;
 }
-
 
 footer {
   position: fixed;
