--- a/main.css
+++ b/main.css
@@ -152,7 +152,8 @@ figure {
     transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 figure {
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
+  padding: 0;
 }
 
 figure:last-child {
