update copy and styling

--- a/main.css
+++ b/main.css
@@ -7,30 +7,27 @@
 @import "reset.css";
 
 :root {
-
   --fg: 255;
-  --bg-shade: .9;
+  --bg-shade: 1;
   --background-secondary: 50;
-  --paragraph-width: 510px;
-  
+  --paragraph-width: 535px;
+
   --fg-100: rgba(var(--fg), var(--fg), var(--fg), 1);
-  --fg-90: rgba(var(--fg),var(--fg),var(--fg), 0.9);
+  --fg-90: rgba(var(--fg), var(--fg), var(--fg), 0.9);
   --fg-50: rgba(var(--fg), var(--fg), var(--fg), 0.5);
   --fg-30: rgba(var(--fg), var(--fg), var(--fg), 0.3);
-  --fg-10: rgba(var(--fg),var(--fg),var(--fg), 0.1);
-  --bg: rgba(0,0,0, var(--bg-shade));
+  --fg-10: rgba(var(--fg), var(--fg), var(--fg), 0.1);
+  --bg: rgba(0, 0, 0, var(--bg-shade));
 
   --h3-size: 17px;
 
-  --body-font-family: 'neue-haas-grotesk-text';
+  --body-font-family: "neue-haas-grotesk-text";
   --body-line-height: 150%;
   --body-size: 15px;
   --body-letter-spacing: 0.02em;
-  
 
   --caption-size: 14px;
   --caption-letter-spacing: 0.02em;
-
 
   --mobile-size: 15px;
   --mobile-letter-spacing: 0.02em;
@@ -45,9 +42,9 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 
-  font-family: var(--body-font-family),neue-haas-unica, aktiv-grotesk, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--body-font-family), neue-haas-unica, aktiv-grotesk,
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   background: var(--bg);
 }
@@ -66,7 +63,7 @@ html {
 
 ::selection {
   color: none;
-  background: none; 
+  background: none;
 }
 
 /* For Mozilla Firefox */
@@ -92,17 +89,16 @@ b {
   width: auto;
 }
 
-b{
+b {
   font-weight: 600;
 }
-
 
 a {
   text-decoration: none;
   border-bottom: 1px solid var(--fg-10);
 }
 
-small{
+small {
   font-size: var(--caption-size);
   color: var(--fg-90);
   line-height: var(--body-line-height);
@@ -115,7 +111,7 @@ small{
   opacity: 0.5;
 }
 
-small b{
+small b {
   font-size: var(--caption-size);
 }
 
@@ -129,7 +125,6 @@ p {
   cursor: default;
 }
 
-
 .media {
   grid-column-start: 2;
   width: 100%;
@@ -142,8 +137,8 @@ p {
   transform-origin: center top;
   border-bottom: none;
   display: inline-block;
-  animation: loadIn 0.8s 1s forwards;
-  opacity: 0;
+  /* animation: loadIn 0.8s 1s forwards; */
+  opacity: 1;
 }
 
 .hoverCard,
@@ -162,11 +157,11 @@ figure:last-child {
 
 .about,
 footer {
-  opacity: 0;
-  animation: loadIn 0.8s 0.5s forwards;
+  opacity: 1;
+  /* animation: loadIn 0.8s 0.5s forwards; */
 }
 
-.hoverCard:nth-child(1) {
+/* .hoverCard:nth-child(1) {
   animation-delay: 0.5s;
 }
 .hoverCard:nth-child(2) {
@@ -177,17 +172,16 @@ footer {
 }
 .hoverCard:nth-child(4) {
   animation-delay: 0.65s;
-}
+} */
 
 .hoverCard:last-child {
   margin-bottom: 0px;
-  animation-delay: 0.65s;
+  /* animation-delay: 0.65s; */
 }
 
 .hoverCard a {
   text-decoration: none;
 }
-
 
 figure:hover {
   transform: scale(1.005);
@@ -197,7 +191,7 @@ figure:hover {
 .hoverCard video,
 .hoverCard img {
   border: 1px solid var(--fg-10);
-  border-radius: 10px;
+  border-radius: 0px;
   display: block;
   width: 100%;
   height: auto;
@@ -205,15 +199,15 @@ figure:hover {
   object-fit: cover;
 }
 
-.hoverCard:hover > img, .hoverCard:hover > video{
+.hoverCard:hover > img,
+.hoverCard:hover > video {
   box-shadow: 0 0 100x var(--fg-10);
   border: 1px solid var(--fg-50);
 }
 
-.hoverCard:hover > small{
-  opacity: .9;
+.hoverCard:hover > small {
+  opacity: 0.9;
 }
-
 
 footer {
   position: fixed;
@@ -260,14 +254,14 @@ footer {
   }
 
   a,
-  p
-  {
+  p {
     line-height: 1.4em;
     font-size: var(--mobile-size);
     letter-spacing: var(--mobile-letter-spacing);
   }
 
-  small, small b{
+  small,
+  small b {
     font-size: var(--caption-size);
     letter-spacing: var(--caption-letter-spacing);
     line-height: 1.4em;
